Save today's work

--- a/index.html
+++ b/index.html
@@ -51,12 +51,8 @@
   <div class="container text-center text-light">
     <div>
       <h2 class="h3">Parce que deux développeurs valent mieux qu’un.</h2>
-      <a href="#projects" class="m-3">
-        <button class="btn-hover color-1">NOS PROJETS</button>
-      </a>
-      <a href="#hire" class="m-3">
-        <button class="btn-hover color-8">NOUS RECRUTER</button>
-      </a>
+      <a href="#projects" class="m-3"><button class="btn-hover color-3">NOS PROJETS</button></a>
+      <a href="#hire" class="m-3"><button class="btn-hover color-3">NOUS RECRUTER</button></a>
     </div>
   </div>
 </section>
@@ -94,7 +90,7 @@
         <h3 class="text-center">Innovant</h3>
         <p class="text-justify" id="d3">
           Nous saurons réaliser votre projet, quelle que soit votre localisation.
-          Du rêve à la réalité : Nous excellons particulièrement dans la concrétisation de vos idées,
+          Du rêve à la réalité : nous excellons particulièrement dans la concrétisation de vos idées,
           même les plus farfelues, pour les transformer en projets et produits innovants.
         </p>
         <img src="assets/img/undraw_server_cluster.png" alt="" class="mt-4">
@@ -124,7 +120,7 @@
           <span class="badge rounded-pill bg-dark">Heroku</span>
         </div>
         <div class="text-center">
-          <a href="//www.cykl.be/" target="_blank"><button class="btn-hover color-5">VOIR LE PROJET</button></a>
+          <a href="//www.cykl.be/" target="_blank"><button class="btn-hover color-3">VOIR LE PROJET</button></a>
         </div>
       </div>
 
@@ -136,7 +132,7 @@
         <p class="card-text text-justify mb-2">
           Cykl est une application éditée par we are the words sprl, une société d'optimisation de contenu SEO basée
           en Belgique à Bruxelle. Nous intervenons sur la partie back-end de l'application afin de la rendre
-          commercialisable à l'horizon 2021
+          commercialisable à l'horizon 2021.
         </p>
         <div class="card-text mb-4">
           <span class="badge rounded-pill bg-dark">Ruby on Rails</span>
@@ -144,7 +140,7 @@
           <span class="badge rounded-pill bg-dark">Heroku</span>
         </div>
         <div class="text-center">
-          <a href="//monka-project.herokuapp.com/" target="_blank"><button class="btn-hover color-5">VOIR LE PROJET</button></a>
+          <a href="//monka-project.herokuapp.com/" target="_blank"><button class="btn-hover color-3">VOIR LE PROJET</button></a>
         </div>
       </div>
       <div class="col-lg-6">
@@ -173,7 +169,7 @@
                   <p class="card-text text-justify lead m-4">
                     <em>“Computer is not the thing, it’s the thing that gets you to the thing”</em> est ma citation préféré.
                     Je vois l’informatique comme un outil au service de l’Humain et j’aurais à coeur de mettre mes
-                    compétences au service de votre projet. Revant de liberté, j’ai saisi l’opportunité de m’associer
+                    compétences au service de votre projet. Rêvant de liberté, j’ai saisi l’opportunité de m’associer
                     avec Julien pour  me lancer comme freelance.
                   </p>
                   <div class="social_networks--right">
@@ -257,7 +253,7 @@
           </div>
           <div class="col-9">
             <h5>Conception de MVP</h5>
-            <p class="text-justify">Vous avez une idée d’application web mais vous ne savez pas coder ? Nous lui donnerons vie pour vous.</p>
+            <p class="text-justify">Vous avez une idée d’application web, mais vous ne savez pas coder ? Nous lui donnerons vie pour vous.</p>
           </div>
         </div>
       </div>
@@ -271,7 +267,7 @@
           </div>
           <div class="col-9">
             <h5>Base de Données</h5>
-            <p class="text-justify">Nous traduisons vos besoins métier pour concevoir votre base de données de A à Z.</p>
+            <p class="text-justify">Nous traduisons vos besoins métiers pour concevoir votre base de données de A à Z.</p>
           </div>
         </div>
         <!-- Block Left Middle -->
@@ -323,25 +319,26 @@
 </div> <!-- end .container -->
 
 
-<div class="buttons">
-  <button class="btn-hover color-1">BUTTON</button>
-  <button class="btn-hover color-2">BUTTON</button>
-  <button class="btn-hover color-3">BUTTON</button>
-  <button class="btn-hover color-4">BUTTON</button>
-  <button class="btn-hover color-5">BUTTON</button>
-  <button class="btn-hover color-6">BUTTON</button>
-  <button class="btn-hover color-7">BUTTON</button>
-  <button class="btn-hover color-8">BUTTON</button>
-  <button class="btn-hover color-9">BUTTON</button>
-  <button class="btn-hover color-10">BUTTON</button>
-  <button class="btn-hover color-11">BUTTON</button>
-</div>
+<!--<div class="buttons">-->
+<!--  <button class="btn-hover color-1">BUTTON</button>-->
+<!--  <button class="btn-hover color-2">BUTTON</button>-->
+<!--  <button class="btn-hover color-3">BUTTON</button>-->
+<!--  <button class="btn-hover color-4">BUTTON</button>-->
+<!--  <button class="btn-hover color-5">BUTTON</button>-->
+<!--  <button class="btn-hover color-6">BUTTON</button>-->
+<!--  <button class="btn-hover color-7">BUTTON</button>-->
+<!--  <button class="btn-hover color-8">BUTTON</button>-->
+<!--  <button class="btn-hover color-9">BUTTON</button>-->
+<!--  <button class="btn-hover color-10">BUTTON</button>-->
+<!--  <button class="btn-hover color-11">BUTTON</button>-->
+<!--</div>-->
 
 
 <!-- FOOTER -->
 <footer class="footer mt-auto py-3 bg-dark">
   <div class="container text-center">
-    <span class="text-muted">Made with ♥️ by Julio & Bento</span>
+    <a href="//github.com/Julio-Bento/portfolio">This project is open source ♥️</span>
+
   </div>
 </footer>
 
