--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           L’informatique abolit les distances physique et nous permet de profiter d’un confort de vivre accru
           pour vous offrir plus de confiance, de  flexibilité et d’engagement.
         </p>
-        <img src="assets/img/undraw_design_components.png" alt="" class="mt-4">
+        <img src="assets/img/frmote.png" alt="" class="mt-4">
       </div>
       <div class="col-lg-3">
         <img src="assets/img/undraw_Invite.png" alt="" class="mb-4">
@@ -338,10 +338,7 @@
 <footer class="footer mt-auto py-3 bg-dark">
   <div class="container text-center">
     <a href="//github.com/Julio-Bento/portfolio">This project is open source ♥️</span>
-<<<<<<< HEAD
 
-=======
->>>>>>> 94e16b997cc115158c3b5416763c40742761125f
   </div>
 </footer>
 
