--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="./assets/css/app.css">
 </head>
-<body>
+<body data-spy="scroll" data-target="#main-navbar" data-offset="0">
 <!-- NAVBAR -->
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" id="main-navbar">
   <div class="container-fluid">
     <div class="neon">
       <p class="neon-text">Julio <span class="first">&</span> Bento</p>
@@ -27,7 +27,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
+          <a class="nav-link" href="#jumbotron">ACCUEIL</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#projects">NOS PROJETS</a>
@@ -47,13 +47,11 @@
 </nav>
 
 <!-- JUMBOTRON -->
-<section class="jumbotron jumbotron-fluid mt-5">
+<section class="jumbotron jumbotron-fluid" id="jumbotron">
   <div class="container text-center text-light">
-    <div>
-      <h2 class="h3">Parce que deux développeurs valent mieux qu’un.</h2>
-      <a href="#projects" class="m-3"><button class="btn-hover color-3">NOS PROJETS</button></a>
-      <a href="#hire" class="m-3"><button class="btn-hover color-3">NOUS RECRUTER</button></a>
-    </div>
+    <h2 class="h3 mt-5">Parce que deux développeurs valent mieux qu’un.</h2>
+    <a href="#projects" class="m-3"><button class="btn-hover color-3">NOS PROJETS</button></a>
+    <a href="#hire" class="m-3"><button class="btn-hover color-3">NOUS RECRUTER</button></a>
   </div>
 </section>
 
@@ -77,7 +75,7 @@
           L’informatique abolit les distances physique et nous permet de profiter d’un confort de vivre accru
           pour vous offrir plus de confiance, de  flexibilité et d’engagement.
         </p>
-        <img src="assets/img/frmote.png" alt="" class="mt-4">
+        <img src="assets/img/undraw_design_components.png" alt="" class="mt-4">
       </div>
       <div class="col-lg-3">
         <img src="assets/img/undraw_Invite.png" alt="" class="mb-4">
@@ -100,7 +98,7 @@
 
   <!-- PROJECTS -->
   <section id="projects">
-    <h2 class="display-4 text-center text-gradient" id="projets">NOS PROJETS</h2>
+    <h2 class="display-4 text-center" >NOS PROJETS</h2>
 
     <div class="row mb-5 align-items-center">
 
@@ -152,7 +150,7 @@
   <!-- OUR TEAM -->
   <section id="team">
     <div class="title">
-      <h2 class="display-4 text-center text-gradient">NOTRE ÉQUIPE</h2>
+      <h2 class="display-4 text-center">NOTRE ÉQUIPE</h2>
     </div>
 
     <div class="bento">
@@ -220,7 +218,7 @@
   <!-- OUR SKILLS -->
   <section id="skills">
     <div class="title">
-      <h2 class="display-4 text-center text-gradient">NOS TALENTS</h2>
+      <h2 class="display-4 text-center">NOS TALENTS</h2>
     </div>
 
     <div class="row justify-content-around">
@@ -296,7 +294,7 @@
 
   <!-- HIRE US -->
   <section id="hire">
-    <h2 class="display-4 text-center text-gradient">NOUS RECRUTER</h2>
+    <h2 class="display-4 text-center">NOUS RECRUTER</h2>
 
     <p class="lead text-center mb-5">Retrouvez-nous sur ces plateformes de Freelancing et proposez-nous votre projet</p>
 
