fix: fix footer wrong html tag

--- a/index.html
+++ b/index.html
@@ -335,8 +335,7 @@
 <!-- FOOTER -->
 <footer class="footer mt-auto py-3 bg-dark">
   <div class="container text-center">
-    <a href="//github.com/Julio-Bento/portfolio">This project is open source ♥️</span>
-
+    <a href="//github.com/Julio-Bento/portfolio">This project is open source ♥️</a>
   </div>
 </footer>
 
