fix: fix bug related to navbar and titles
Problem : When clicking on on link in the navbar, we were send to the corresponding section of the link, but the section title was hidden beneath the navbar.

Fix : I fixed the problem by adding an empty div just before the title, and giving it the id="section" corresponding to the section, so that this div could be hidden by the navbar, but that the title can still be visible.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 </nav>
 
 <!-- JUMBOTRON -->
-<section class="jumbotron jumbotron-fluid" id="jumbotron">
+<div id="jumbotron"></div>
+<section class="jumbotron jumbotron-fluid">
   <div class="container text-center text-light">
     <h2 class="h3 mt-5">Parce que deux développeurs valent mieux qu’un.</h2>
     <a href="#projects" class="m-3"><button class="btn-hover color-3">NOS PROJETS</button></a>
@@ -96,8 +97,10 @@
     </div>
   </section>
 
+
   <!-- PROJECTS -->
-  <section id="projects">
+  <div id="projects"></div>
+  <section>
     <h2 class="display-4 text-center" >NOS PROJETS</h2>
 
     <div class="row mb-5 align-items-center">
@@ -148,7 +151,8 @@
   </section>
 
   <!-- OUR TEAM -->
-  <section id="team">
+  <div id="team"></div>
+  <section>
     <div class="title">
       <h2 class="display-4 text-center">NOTRE ÉQUIPE</h2>
     </div>
@@ -216,7 +220,8 @@
   </section>
 
   <!-- OUR SKILLS -->
-  <section id="skills">
+  <div id="skills"></div>
+  <section>
     <div class="title">
       <h2 class="display-4 text-center">NOS TALENTS</h2>
     </div>
@@ -293,7 +298,8 @@
   </section>
 
   <!-- HIRE US -->
-  <section id="hire">
+  <div id="hire"></div>
+  <section>
     <h2 class="display-4 text-center">NOUS RECRUTER</h2>
 
     <p class="lead text-center mb-5">Retrouvez-nous sur ces plateformes de Freelancing et proposez-nous votre projet</p>
@@ -343,6 +349,5 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
 <script src="./assets/js/app.js"></script>
-
 </body>
 </html>
