style: add icons for section "our skills"

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <!-- Block Left Middle -->
         <div class="row align-items-center justify-content-end mb-4">
           <div class="col-1 mr-4">
-            <img src="assets/img/idea_bulb.png" alt="">
+            <img src="assets/img/icon_integration.svg" alt="" width="50">
           </div>
           <div class="col-9">
             <h5>Intégration Web</h5>
@@ -252,7 +252,7 @@
         <!-- Block Left Bottom -->
         <div class="row align-items-center justify-content-end mb-4">
           <div class="col-1 mr-4">
-            <img src="assets/img/idea_bulb.png" alt="">
+            <img src="assets/img/icon_rocket.svg" alt="" width="50">
           </div>
           <div class="col-9">
             <h5>Conception de MVP</h5>
@@ -266,7 +266,7 @@
         <!-- Block Left Top -->
         <div class="row align-items-center justify-content-start mb-4">
           <div class="col-1 mr-4">
-            <img src="assets/img/idea_bulb.png" alt="">
+            <img src="assets/img/icon_database.svg" alt="" width="50">
           </div>
           <div class="col-9">
             <h5>Base de Données</h5>
@@ -276,7 +276,7 @@
         <!-- Block Left Middle -->
         <div class="row align-items-center justify-content-start mb-4">
           <div class="col-1 mr-4">
-            <img src="assets/img/idea_bulb.png" alt="">
+            <img src="assets/img/icon_responsive.svg" alt="" width="50">
           </div>
           <div class="col-9">
             <h5>Responsive Design</h5>
@@ -286,7 +286,7 @@
         <!-- Block Left Bottom -->
         <div class="row align-items-center justify-content-start mb-4">
           <div class="col-1 mr-4">
-            <img src="assets/img/idea_bulb.png" alt="">
+            <img src="assets/img/icon_backoffice.svg" alt="" width="50">
           </div>
           <div class="col-9">
             <h5>Back Office</h5>
