style: edit icon not fitting well with others icons in "our skills" section

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <!-- Block Left Top -->
         <div class="row align-items-center justify-content-end mb-4">
           <div class="col-lg-1 mr-4">
-            <img src="assets/img/idea_bulb.png" alt="">
+            <img src="assets/img/icon_programming.svg" alt="" width="50">
           </div>
           <div class="col-md-9">
             <h5>Développement Web</h5>
