style: edit secondary btn call to action in jumboron
Primary and secondary buttons had the same design in the jumbotron, which is a bad UI&UX practice. SO I changed it to be just a simple link

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 <section class="jumbotron jumbotron-fluid">
   <div class="container text-center text-light">
     <h2 class="h3 mt-5">Parce que deux développeurs valent mieux qu’un.</h2>
-    <a href="#projects" class="m-3"><button class="btn-hover color-3">NOS PROJETS</button></a>
-    <a href="#hire" class="m-3"><button class="btn-hover color-3">NOUS RECRUTER</button></a>
+    <a href="#projects"><button class="btn-hover color-3">NOUS RECRUTER</button></a>
+    <a href="#hire" class="font-weight-bold gradient-link">NOS PROJETS</a>
   </div>
 </section>
 
@@ -341,7 +341,7 @@
 <!-- FOOTER -->
 <footer class="footer mt-auto py-3 bg-dark">
   <div class="container text-center">
-    <a href="//github.com/Julio-Bento/portfolio">This project is open source ♥️</a>
+    <a href="//github.com/Julio-Bento/portfolio" class="gradient-link">This project is open source ♥️</a>
   </div>
 </footer>
 
